<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">스마트홈</string>
    <string name="select_device">제어할 기기를 선택하세요</string>
    <string name="aircon">에어컨</string>
    <string name="tv">TV (준비중)</string>
    <string name="light">조명 (준비중)</string>
    <string name="speaker">스피커 (준비중)</string>
    <string name="temperature">%1$d°C</string>
    <string name="humidity">%1$d%%</string>
    <string name="power">전원: %1$s</string>
    <string name="power_on">켜짐</string>
    <string name="power_off">꺼짐</string>
    <string name="power_button">전원</string>
    <string name="temp_up">온도 +</string>
    <string name="temp_down">온도 -</string>
    <string name="connection_status">연결 상태: %1$s</string>
    <string name="connected">연결됨</string>
    <string name="disconnected">연결 안됨</string>
    <string name="connecting">연결 중...</string>
    <string name="connection_error">연결 오류</string>
    <string name="power_status">전원: 꺼짐</string>
    <string name="temperature_placeholder">온도: --°C</string>
    <string name="humidity_placeholder">습도: --%</string>
    <string name="connection_status_placeholder">연결 상태: 연결 안됨</string>
</resources>